added CoursePreview, updated backend logic (added Units + Lessons model), imporoved front code for Tariff render in different parts of the site